# cookie-scoop

./: README.md
crates/cookie-scoop/: Cargo.toml
crates/cookie-scoop-cli/: Cargo.toml
crates/cookie-scoop-cli/src/: main.rs
crates/cookie-scoop/src/: public.rs  types.rs
crates/cookie-scoop/src/providers/chromium/: mod.rs
